Fix regression with project installer dark mode.

--- a/styles/components/project_installer.scss
+++ b/styles/components/project_installer.scss
@@ -1,6 +1,6 @@
 /* Project Installer */
 
-.installer-browser .installer-browser-block {
+.installer-browser .installer-browser-region .installer-browser-block {
   background-color: transparent;
   h2 {
     border-radius: var(--gin-border-m);
